--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 </head>
 
 <body>
-
-  <header>a</header>
-  <div>b</div>
-  <div>c</div>
-  <div>d</div>
-  <div>e</div>
-  <div>f</div>
-  <div>g</div>
-  <div>h</div>
-  <footer>i</footer>
-
+  <div class="screenview">
+    <header>a</header>
+    <div>b</div>
+    <div>c</div>
+    <div>d</div>
+    <div>e</div>
+    <div>f</div>
+    <div>g</div>
+    <div>h</div>
+    <footer>i</footer>
+  </div>
 </body>
 
 </html>
